[package]
name = "imview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18"
egui_extras = "0.18"
arrayvec = "0.7"
image = "0.24"
clap = { version = "3.1", features = ["derive"] }
simple_logger = "2.1"
log = "0.4"
rayon = "1.5"
notify = "4.0"
num_cpus = "1.13"
crossbeam = "0.8"
cached = "0.34"