[package]
name = "imview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imview-image-ui = { path = "../imview-image-ui" }
imview-image-loader = { path = "../imview-image-loader" }
eframe = "0.18"
egui_extras = "0.18"
clap = { version = "3.1", features = ["derive"] }
simple_logger = "2.1"
log = "0.4"